expected/main/core/structs/structs-init-default2.err
ERROR: "actual/main/core/structs/structs-init-default2.lc", line 2
struct S [ x, y <- i, z :: Stored Word ]
                   ^
"i" is not in scope

ERROR: Aborting after previously reported error

